@@ -16,20 +16,6 @@ void outputHeader(FILE* output)
 
 void outputCountryHeader(FILE* output)
 {
-	fprintf(output, "	wage_reform=no_minimum_wage\n");
-	fprintf(output, "	work_hours=no_work_hour_limit\n");
-	fprintf(output, "	safety_regulations=no_safety\n");
-	fprintf(output, "	unemployment_subsidies=no_subsidies\n");
-	fprintf(output, "	pensions=no_pensions\n");
-	fprintf(output, "	health_care=no_health_care\n");
-	fprintf(output, "	slavery=yes_slavery\n");
-	fprintf(output, "	vote_franschise=none_voting\n");
-	fprintf(output, "	upper_house_composition=appointed\n");
-	fprintf(output, "	voting_system=first_past_the_post\n");
-	fprintf(output, "	public_meetings=no_meeting\n");
-	fprintf(output, "	press_rights=state_press\n");
-	fprintf(output, "	trade_unions=no_trade_unions\n");
-	fprintf(output, "	political_parties=underground_parties\n");
 	fprintf(output, "	upper_house=\n");
 	fprintf(output, "	{\n");
 	fprintf(output, "		reactionary=0.00000\n");
