@@ -210,3 +210,7 @@ Revision	Version Updated		Log Message
 193		C++			Complete port whitelist and blacklist.
 194		C++			Speed up state conversion (O(n^2)->O(n))
 195		C++			Speed up country mapping
+196		C++			Added another DW save game
+197		C++			Correct DW Switzerland province mappings
+198		C++			steppe_horde added to government map.
+199		C++			Always give democracies some form of voting rights.
